public interface Connectable {
public static void main(String[] args) {
    
} boolean estado = false;
public void turnOn();
public void turnOff();
public boolean isOn();
}
